--- a/students/deploy/ingress.yaml
+++ b/students/deploy/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: students
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - host: students.minikube
