--- a/echo/deployment.yaml
+++ b/echo/deployment.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/version: 1.0.0
     environment: minikube
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app.kubernetes.io/name: echo
